k8s/traefik/service-web.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web
  namespace: opa-talk
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: traefik
  ports:
  - name: web
    port: 80
    targetPort: web
