k8s/traefik/service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: opa-talk
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: traefik
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
